--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
 						<enabled>false</enabled>
 					</snapshots>
 				</pluginRepository>
+				<pluginRepository>
+					<snapshots>
+						<enabled>false</enabled>
+					</snapshots>
+					<id>spring-releases</id>
+					<name>Spring releases</name>
+					<url>http://repo.spring.io/libs-release-local</url>
+				</pluginRepository>
 			</pluginRepositories>
 		</profile>
 	</profiles>
