--- a/spring-cloud-starter-stream-processor-transform/pom.xml
+++ b/spring-cloud-starter-stream-processor-transform/pom.xml
@@ -34,6 +34,9 @@
 					<generatedApps>
 						<transform-processor />
 					</generatedApps>
+					<additionalAppProperties>
+						<additionalAppProperty>spring.cloud.stream.bindings.input.contentType=text/plain</additionalAppProperty>
+					</additionalAppProperties>
 				</configuration>
 			</plugin>
 		</plugins>
