--- a/transform-app-dependencies/pom.xml
+++ b/transform-app-dependencies/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.cloud.stream.app</groupId>
     <artifactId>transform-app-dependencies</artifactId>
-    <version>2.1.0.BUILD-SNAPSHOT</version>
+    <version>2.1.0.M2</version>
     <packaging>pom</packaging>
     <name>transform-app-dependencies</name>
     <description>Spring Cloud Stream transform App Dependencies</description>
@@ -20,7 +20,7 @@
             <dependency>
                 <groupId>org.springframework.cloud.stream.app</groupId>
                 <artifactId>spring-cloud-starter-stream-processor-transform</artifactId>
-                <version>2.1.0.BUILD-SNAPSHOT</version>
+                <version>2.1.0.M2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
